--- a/Mobile app 2/.local/ProjectSettings.json
+++ b/Mobile app 2/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Split rawDataTable.xaml\",\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
