+ annotations, suggestive names and workbook read/write

--- a/Mobile app 2/.local/ProjectSettings.json
+++ b/Mobile app 2/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"FilterSplitDataTable.xaml\",\"SplitRawDataTable.xaml\",\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}"}
