--- a/Mobile app 1/.local/ProjectSettings.json
+++ b/Mobile app 1/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"TesdWf.xaml\",\"Main.xaml\"]"}
+{"ProjectWatches":"{\"Value\":[]}","ProjectBreakpoints":"{\"Value\":{}}","OpenedDocuments":"[\"EditRawDataTable.xaml\",\"Main.xaml\"]"}
